Emplemented way for play area to scale in size.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class ="playArea">
+  </div>
 </body>
+<script  src="java.js"> </script>
 </html>
